# ESP32-Smart-Garage-Door_Controller

./: .gitignore  CMakeLists.txt  README.md  diagram.json  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults  wokwi.toml
components/protocol_common/: wifi_connect.c
components/ultrasonic/: CMakeLists.txt  ultrasonic.c
main/: CMakeLists.txt  Kconfig.projbuild  application.c  application.h  http.c  http.h  main.cpp  main.h  mqtt.c  mqtt.h  utils.c  utils.h
